# Gauss_Newton_solver

./: CMakeLists.txt  README.md  gauss_newton.kdev4  main.cpp
.kdev4/: gauss_newton.kdev4
